{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "AgentControl",
            "id": "fc4fbc17-cef8-4dde-92fb-581646b51fab",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2b8980ac-c5b0-4856-ae39-7494f31fb789",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "60b73ea3-bba7-4778-8045-6d115295987e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "9235aeac-9241-4aa2-b7a0-23f6df19ec45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "e975b748-922f-423d-8c7e-c71ebb50949e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "c0102edf-c27c-4628-af7a-35bd51ddb3cd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventorySlot",
                    "type": "Value",
                    "id": "fe5a49ef-bf98-4190-8b89-28ffecd554f3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "05242921-2151-4110-b00c-92bc6a693b8f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c5e72bfc-2986-4487-98f4-b785c22f4922",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a8ff9d76-2afa-487a-b326-0014ef411160",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0ab47c68-5139-4f28-9dbb-f743f26df7cb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3f89d4bf-7827-419c-b642-103ca8a00352",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53a90b7b-a26f-42ef-9121-317babaaaff7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ae18146a-74e4-4cce-a40f-0d3d1cff00bc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4870b87b-f7bd-4456-8528-db3c8afd6d98",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "686f9536-70f3-47ad-8164-ba489b81fa1d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e19c8b3-feb9-4df0-afc9-599d6aa63e26",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1215658f-9b20-4434-b3f1-47dc21ae252b",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "Scale(factor=0)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb70d1b3-bcb0-4aca-a656-1c6b807c1247",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "Scale",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae30b877-230d-492f-a5eb-aa2cbae97f21",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "Scale(factor=2)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1fdf772-d856-4f47-80ae-dc16f9aa7488",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "Scale(factor=3)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09125d33-3423-469c-b4f8-d496ddb20c66",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "Scale(factor=4)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a38bcae-7ba4-42c6-8326-4d91d5bfcd26",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "Scale(factor=5)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5ae11af-6c9a-4235-8bda-9b5516255af5",
                    "path": "<Keyboard>/7",
                    "interactions": "Press",
                    "processors": "Scale(factor=6)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ca5a74-33ad-40f4-b5af-fb6b77c9c006",
                    "path": "<Keyboard>/8",
                    "interactions": "Press",
                    "processors": "Scale(factor=7)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d9f79e-625f-4754-80b6-be36c71657d0",
                    "path": "<Keyboard>/9",
                    "interactions": "Press",
                    "processors": "Scale(factor=8)",
                    "groups": ";Keyboard&Mouse",
                    "action": "InventorySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23d00281-9b94-4fc7-ac55-e24dc745ba23",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RTSControl",
            "id": "9f8142dc-739f-4c8b-8e57-55e79d8dbd89",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ee34303f-e78c-4dc0-bb22-f8dea5773db2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "ffe954c1-4760-4509-b0ad-582793cd480c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "f9c3d139-070e-481a-8097-b905bb7670cf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a44338a8-3265-4ddf-b742-f85893beb840",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4568eb36-8029-426a-8d4b-04c63b6d93a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82b219da-c6be-49ee-bd64-f966c8d7fc5d",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}